--- a/static/index.html
+++ b/static/index.html
@@ -53,7 +53,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><img style="max-width:100px; margin-top: -9px;" src="img/logo.png" alt="volt"> Volt</a>
+          <a class="navbar-brand" href="#"><img style="margin-top: -9px;" src="img/logo.png" alt="volt"></a>
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right" ng-controller="ModalDemoCtrl">
