launch task WIP

--- a/static/index.html
+++ b/static/index.html
@@ -77,7 +77,7 @@
         <table class="table table-striped">
             <thead><tr><th>ID</th><th>CPUs</th><th>MEM</th><th>Command</th></tr></thead>
             <tbody>
-                <tr ng-repeat="task in tasks"><td>{{task.ID}}</td><td>{{task.cpus}}</td><td>{{task.mem}}</td><td>{{task.cmd}}</td></tr>
+                <tr ng-repeat="task in tasks"><td>{{task.id}}</td><td>{{task.cpus}}</td><td>{{task.mem}}</td><td>{{task.cmd}}</td></tr>
             </tbody>
   
 </table>
