--- a/static/index.html
+++ b/static/index.html
@@ -49,10 +49,11 @@
             <h3 class="modal-title" >{{file.name}}</h3>
         </div>
         <div class="modal-body">
-	  <pre>{{file.content}}</pre>
+	  <pre style="max-height:430px">{{file.content}}</pre>
         </div>
         <div class="modal-footer">
             <button class="btn btn-default" ng-click="close()">Close</button>
+            <button class="btn btn-primary" ng-click="refresh()">Refresh</button>
         </div>
     </script>
 
