--- a/static/index.html
+++ b/static/index.html
@@ -96,7 +96,7 @@
 		<th>MEM</th>
 		<th>Docker Image</th>
 		<th>Command</th>
-		<th>SlaveID</th>
+		<th>Hostname</th>
 		<th>State</th>
 		<th>OUTPUTS</th>
 	    </tr>
@@ -127,7 +127,7 @@
 		  <td>{{task.mem}}</td>
 		  <td>{{task.docker_image}}</td>
 		  <td>{{task.cmd}}</td>
-		  <td>{{task.slave_id}}</td>
+		  <td>{{task.slave_hostname}}</td>
 		  <td><span class="label label-{{task.class}}">{{task.state}}</span></td>
 		  <td>
 		    <span class="label label-primary" ng-controller="File">
